sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:6: error: '(' expected but 'for' found.
    for (i <- 0 to taille-1){
    ^DutchFlagAlgo:13: error: illegal start of simple expression
}
^